@@ -14,8 +14,8 @@
  * See the GNU Lesser General Public License in COPYING.LGPL for more details.
  */
 
-/* This shows how to defer termination of a task until the termination of
- * another task.  */
+/* This shows how to defer termination of a task thanks to
+ * starpu_task_end_dep_add.  */
 
 #include <starpu.h>
 
@@ -25,20 +25,14 @@
 
 void cpu_codelet2(void *descr[], void *args)
 {
-	int *val = (int *)STARPU_VARIABLE_GET_PTR(descr[0]);
+	(void)descr;
 	(void)args;
-	STARPU_ASSERT(*val == 2*INIT);
-	starpu_sleep(0.1);
-	STARPU_ASSERT(*val == 2*INIT);
-	*val *= 2;
 }
 
 struct starpu_codelet cl2 =
 {
 	.cpu_funcs = {cpu_codelet2},
 	.cpu_funcs_name = {"cpu_codelet2"},
-	.nbuffers = 1,
-	.modes = {STARPU_RW},
 	.name = "codelet2"
 };
 
@@ -46,14 +40,14 @@ void cpu_codelet(void *descr[], void *args)
 {
 	(void)args;
 	int *val = (int *)STARPU_VARIABLE_GET_PTR(descr[0]);
-	struct starpu_task *task = starpu_task_get_current();
+	struct starpu_task *task;
+
+	task = starpu_task_get_current();
+	starpu_task_end_dep_add(task, 1);
 
 	starpu_task_insert(&cl2,
-			   STARPU_RW, task->handles[0],
-			   STARPU_TASK_END_DEPS_ARRAY, 1, &task,
+			   STARPU_CALLBACK_WITH_ARG, starpu_task_end_dep_release, task,
 			   0);
-	STARPU_ASSERT(*val == INIT);
-	starpu_sleep(0.1);
 	STARPU_ASSERT(*val == INIT);
 	*val *= 2;
 }
@@ -73,7 +67,6 @@ int main(void)
 	int ret;
 	starpu_data_handle_t value_handle;
 	struct starpu_conf conf;
-	struct starpu_task *task;
 
 	starpu_conf_init(&conf);
 	conf.nmic = 0;
@@ -96,25 +89,14 @@ int main(void)
 
 	starpu_variable_data_register(&value_handle, STARPU_MAIN_RAM, (uintptr_t)&value, sizeof(value));
 
-	task = starpu_task_build(&cl,
+	ret = starpu_task_insert(&cl,
 				 STARPU_RW, value_handle,
 				 0);
-	STARPU_ASSERT(task);
-	task->detach = 0;
-	ret = starpu_task_submit(task);
-	STARPU_CHECK_RETURN_VALUE(ret, "starpu_task_submit");
-	ret = starpu_task_wait(task);
-	STARPU_CHECK_RETURN_VALUE(ret, "starpu_task_wait");
-
-	starpu_data_set_sequential_consistency_flag(value_handle, 0);
-	starpu_data_acquire_on_node(value_handle, STARPU_MAIN_RAM, STARPU_R);
-	/* Waiting for the main task should have also waited for the subtask */
-	STARPU_ASSERT(value == 2*2*INIT);
-	starpu_data_release_on_node(value_handle, STARPU_MAIN_RAM);
+	STARPU_CHECK_RETURN_VALUE(ret, "starpu_task_insert");
 
 	starpu_data_unregister(value_handle);
 
-	STARPU_ASSERT(value == 2*2*INIT);
+	STARPU_ASSERT(value == 2*INIT);
 
         starpu_shutdown();
 
